--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Pornstar Martini</title>
+  <html>
+    <head>
+      <title>CocktailCorner</title>
+  <link rel="stylesheet" href="./CSS/style-about.css"/>
+    </head>
 
-
-<link rel="stylesheet" href="./CSS/style-about.css"/>
-
-</head>
+    <body>
+      <h1> COCKTAIL CORNER </h1>
+      <h2> Cocktail corner are on a mission to find and review all the greatest cockatils </h2>
