--- a/about.html
+++ b/about.html
@@ -2,9 +2,15 @@
   <html>
     <head>
       <title>CocktailCorner</title>
+    <link rel=""
   <link rel="stylesheet" href="./CSS/style-about.css"/>
     </head>
 
     <body>
       <h1> COCKTAIL CORNER </h1>
-      <h2> Cocktail corner are on a mission to find and review all the greatest cockatils </h2>
+      <h2> Cocktail corner are on a mission to find and review all the greatest cocktails </h2>
+
+
+      <img class="img" src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="600px">
+      <img class="img" src="./margarita.jpeg" alt="A local image" width= "600px">
+      <img class="img" src="./pinacolda.jpeg" alt="A local imgae"width= "600px"> 
