--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">Cocktails <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -38,13 +38,13 @@
           </ul>
         </div>
       </nav>
-
+</div>
 
 <div>
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px">
+        <a href="https://www.w3schools.com/html/"> <img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px"</a>
       </div>
       <div class="col-sm">
         <img src="./sangria.jpg" alt="A local image" width="495px" height="430px">
