--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <a href="https://www.w3schools.com/html/"> <img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px"</a>
+        <img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px">
       </div>
       <div class="col-sm">
         <img src="./sangria.jpg" alt="A local image" width="495px" height="430px">
