Add pina colada

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
   <body>
 
-<img class="img-circle" src="./cocktail-corner.jpg" alt="A local image" width="200px">
+<A HREF="./index.html"><img class="img-circle" src="./cocktail-corner.jpg" alt="A local image" width="200px"></A>
 
 
 <h1 id=header> Exploring the best cocktails </h1>
