--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px">
+        <A HREF="./about.html"><img src="./passionfruit-pornstar-martini.jpg" alt="A local image" width="495px" height="430px"</A>
       </div>
       <div class="col-sm">
-        <img src="./sangria.jpg" alt="A local image" width="495px" height="430px">
+        <A HREF="./sangria.html"><img src="./sangria.jpg" alt="A local image" width="495px" height="430px"</A>
+      </div>
+      <div class="col-sm">
+        <A HREF="./pinacolada.html"><img src="./pinacolda.jpeg" alt="A local image" width="495px" height="430px"</A>
       </div>
       <div class="col-sm">
         <img src="./margarita.jpeg" alt="A local image" width="495px" height="430px">
-      </div>
-      <div class="col-sm">
-        <img src="./pinacolda.jpeg" alt="A local image" width="495px" height="430px">
       </div>
     </div>
   </div>
