--- a/pinacolada.html
+++ b/pinacolada.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sangria</title>
+  <title>Pina Colada</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -41,23 +41,23 @@
     </nav>
 
 
-<h1> Sangria </h1>
+<h1> Pina Colada </h1>
 
-<img class="img-circle" src="./sangria.jpg" alt="A local image" width="600px">
+<img class="img-circle" src="./pinacolda.jpeg" alt="A local image" width="600px">
 
 <div id="list">
   <ul>
-      <li> Taste:      5 Stars</p>
+      <li> Taste:      2 Stars</p>
       <li> Strength:   3 Stars </p>
-      <li> Style:      2 Stars </p>
+      <li> Style:      4 Stars </p>
   </ul>
 
-<p> Fruity Spanish cocktail, drink for a holiday feel! </p>
+<p> Creamy coconutty cocktail! </p>
 
-<p> Best snack to pair: Chorizo </p>
+<p> Best snack to pair: Pineapple </p>
 
 <p>
-  <a href="https://www.bbcgoodfood.com/recipes/passionfruit-pornstar-martini"> Recipe </a>
+  <a href="https://www.bbcgoodfood.com/recipes/pina-colada"> Recipe </a>
 </p>
 
 </div>
