--- a/about.html
+++ b/about.html
@@ -20,25 +20,19 @@
 <p></p>
 
 
-  <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Cocktails <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">menu</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<nav class="navbar navbar-dark bg-dark">
+    <A HREF="./index.html" class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" href="#">Reviews</a>
+    <a class="navbar-brand" href="#">Recipes</a>
+    <a class="navbar-brand" href="#">Bar Recommendations</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      </ul>
+    </div>
+  </nav>
+
+  </nav>
 
 
 <h1> Pornstar Martini </h1>
@@ -52,7 +46,7 @@
       <li> Style:      4 Stars </p>
   </ul>
 
-<p> Blend of vanilla vodka and passion fruit with a shot of prosecco, can't be beat! </p>
+<p> Perfect blend of vanilla vodka and passion fruit with a shot of prosecco! </p>
 
 <p> Best snack to pair: Olives </p>
 
