--- a/sangria.html
+++ b/sangria.html
@@ -20,24 +20,19 @@
 <p></p>
 
 
+
   <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Home</a>
+      <A HREF="./index.html" class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="#">Reviews</a>
+      <a class="navbar-brand" href="#">Recipes</a>
+      <a class="navbar-brand" href="#">Bar Recommendations</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Cocktails <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">menu</a>
-          </li>
         </ul>
       </div>
+    </nav>
+
     </nav>
 
 
@@ -57,7 +52,7 @@
 <p> Best snack to pair: Chorizo </p>
 
 <p>
-  <a href="https://www.bbcgoodfood.com/recipes/passionfruit-pornstar-martini"> Recipe </a>
+  <a href="https://www.bbcgoodfood.com/recipes/sangria"> Recipe </a>
 </p>
 
 </div>
